<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:text="@string/the_number_of_times_you_won"/>
    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:text="@string/wins" />
    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:layout_below="@id/tv5"
        android:text="@string/the_number_of_times_you_lost" />
    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv6"
        android:layout_marginTop="20sp"
        android:textSize="20sp"
        android:textColor="@color/White"
        android:text="@string/loses" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv7"
        android:layout_marginTop="40sp"
        android:text="@string/Try_again" />
</RelativeLayout>